[package]
name = "devicemem_cuda"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
build = "build.rs"

[lib]
name = "devicemem_cuda"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "test.rs"

[build-dependencies]
gcc = "*"

[dependencies]
libc = "^0.2"
cuda = "^0.1"
cuda_blas = "^0.1"
cuda_dnn = "^0.1"
#densearray = { path = "../libdensearray" }
densearray = "^0.1"
